<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:key="termux"
        app:title="@string/termux_preferences_title"
        app:summary="@string/termux_preferences_summary"
        app:fragment="com.termux.app.fragments.settings.TermuxPreferencesFragment"/>

    <Preference
        app:key="termux_api"
        app:title="@string/termux_api_preferences_title"
        app:summary="@string/termux_api_preferences_summary"
        app:isPreferenceVisible="false"
        app:fragment="com.termux.app.fragments.settings.TermuxAPIPreferencesFragment"/>

    <Preference
        app:key="termux_float"
        app:title="@string/termux_float_preferences_title"
        app:summary="@string/termux_float_preferences_summary"
        app:isPreferenceVisible="false"
        app:fragment="com.termux.app.fragments.settings.TermuxFloatPreferencesFragment"/>

    <Preference
        app:key="termux_tasker"
        app:title="@string/termux_tasker_preferences_title"
        app:summary="@string/termux_tasker_preferences_summary"
        app:isPreferenceVisible="false"
        app:fragment="com.termux.app.fragments.settings.TermuxTaskerPreferencesFragment"/>

    <Preference
        app:key="termux_widget"
        app:title="@string/termux_widget_preferences_title"
        app:summary="@string/termux_widget_preferences_summary"
        app:isPreferenceVisible="false"
        app:fragment="com.termux.app.fragments.settings.TermuxWidgetPreferencesFragment"/>

    <Preference
        app:key="style"
        app:title="@string/action_style_terminal"
        app:persistent="false"/>

    <Preference
        app:key="autossh_config"
        app:title="@string/action_open_autossh_config"
        app:persistent="false"/>

    <Preference
        app:key="session_definition_config"
        app:title="@string/action_open_session_definition_config"
        app:persistent="false"/>

    <Preference
        app:key="always_na_session_names"
        app:title="@string/action_open_always_na_session_names_config"
        app:summary="@string/summary_always_na_session_names_config"
        app:persistent="false"/>

    <Preference
        app:key="crash_log_viewer"
        app:title="@string/action_open_crash_log_viewer"
        app:summary="@string/summary_crash_log_viewer"
        app:persistent="false"/>

    <Preference
        app:key="clear_saved_sessions"
        app:title="@string/action_clear_saved_sessions"
        app:summary="@string/summary_clear_saved_sessions"
        app:persistent="false"/>

    <SwitchPreferenceCompat
        app:key="auto_check_for_updates"
        app:title="@string/auto_check_for_updates_title"
        app:summary="@string/auto_check_for_updates_summary"
        app:defaultValue="false"/>

    <Preference
        app:key="update_apk"
        app:title="@string/update_apk_preference_title"
        app:summary="@string/update_apk_preference_summary"
        app:persistent="false"/>

    <com.termux.app.activities.LongClickCopyPreference
        app:key="about"
        app:title="@string/about_preference_title"
        app:persistent="false"/>
    <!-- app:layout="@layout/preference_markdown_text" -->

    <Preference
        app:key="donate"
        app:title="@string/donate_preference_title"
        app:persistent="false"
        app:isPreferenceVisible="false"/>

</PreferenceScreen>
