<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="keyboard"
        app:title="@string/termux_keyboard_header">

        <SwitchPreferenceCompat
            app:key="soft_keyboard_enabled"
            app:summaryOff="@string/termux_soft_keyboard_enabled_off"
            app:summaryOn="@string/termux_soft_keyboard_enabled_on"
            app:title="@string/termux_soft_keyboard_enabled_title" />

        <SwitchPreferenceCompat
            app:key="soft_keyboard_enabled_only_if_no_hardware"
            app:summaryOff="@string/termux_soft_keyboard_enabled_only_if_no_hardware_off"
            app:summaryOn="@string/termux_soft_keyboard_enabled_only_if_no_hardware_on"
            app:title="@string/termux_soft_keyboard_enabled_only_if_no_hardware_title" />

        <SwitchPreferenceCompat
            app:key="volume_keys_switch_sessions_enabled"
            app:summaryOff="@string/termux_volume_keys_switch_sessions_enabled_off"
            app:summaryOn="@string/termux_volume_keys_switch_sessions_enabled_on"
            app:title="@string/termux_volume_keys_switch_sessions_enabled_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="read_aloud"
        app:title="@string/termux_read_aloud_header">

        <SwitchPreferenceCompat
            app:key="speak_tag_auto_read_enabled"
            app:summaryOff="@string/termux_speak_tag_auto_read_enabled_off"
            app:summaryOn="@string/termux_speak_tag_auto_read_enabled_on"
            app:title="@string/termux_speak_tag_auto_read_enabled_title" />

    </PreferenceCategory>

</PreferenceScreen>
