<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="view"
        app:title="@string/termux_terminal_view_view_header">

        <SwitchPreferenceCompat
            app:key="terminal_margin_adjustment"
            app:summaryOff="@string/termux_terminal_view_terminal_margin_adjustment_off"
            app:summaryOn="@string/termux_terminal_view_terminal_margin_adjustment_on"
            app:title="@string/termux_terminal_view_terminal_margin_adjustment_title" />

        <SwitchPreferenceCompat
            app:key="screen_always_on"
            app:summaryOff="@string/termux_terminal_view_keep_screen_on_off"
            app:summaryOn="@string/termux_terminal_view_keep_screen_on_on"
            app:title="@string/action_toggle_keep_screen_on" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="tap_to_open_url_enabled"
            app:summaryOff="@string/termux_terminal_view_tap_to_open_url_off"
            app:summaryOn="@string/termux_terminal_view_tap_to_open_url_on"
            app:title="@string/termux_terminal_view_tap_to_open_url_title" />

    </PreferenceCategory>

</PreferenceScreen>
