<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="meet_low_power_video"
        app:title="@string/browser_meet_low_power_video_header">

        <SwitchPreferenceCompat
            app:key="browser_meet_low_power_video_enabled"
            app:summaryOff="@string/browser_meet_low_power_video_enabled_off"
            app:summaryOn="@string/browser_meet_low_power_video_enabled_on"
            app:title="@string/browser_meet_low_power_video_enabled_title"
            app:defaultValue="false" />

        <ListPreference
            app:key="browser_meet_low_power_video_max_resolution"
            app:title="@string/browser_meet_low_power_video_max_resolution_title"
            app:summary="%s"
            app:entries="@array/browser_meet_low_power_video_max_resolution_entries"
            app:entryValues="@array/browser_meet_low_power_video_max_resolution_values"
            app:defaultValue="640"
            app:dependency="browser_meet_low_power_video_enabled" />

        <ListPreference
            app:key="browser_meet_low_power_video_max_framerate"
            app:title="@string/browser_meet_low_power_video_max_framerate_title"
            app:summary="%s"
            app:entries="@array/browser_meet_low_power_video_max_framerate_entries"
            app:entryValues="@array/browser_meet_low_power_video_max_framerate_values"
            app:defaultValue="15"
            app:dependency="browser_meet_low_power_video_enabled" />

    </PreferenceCategory>

</PreferenceScreen>
