<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/summary_always_na_session_names_config" />

    <EditText
        android:id="@+id/always_na_session_names_input"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/hint_always_na_session_names"
        android:inputType="textMultiLine"
        android:gravity="top" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/always_na_session_names_config_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/action_always_na_session_names_config_save" />

</LinearLayout>
