<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="8dp">

    <EditText
        android:id="@+id/browser_edit_url_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_browser_url"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:maxLines="1"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Button
            android:id="@+id/browser_edit_url_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:minWidth="0dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="11sp"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/browser_edit_url_copy"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:minWidth="0dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="11sp"
            android:text="@string/action_browser_edit_url_copy" />

        <Button
            android:id="@+id/browser_edit_url_create_session"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:minWidth="0dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="11sp"
            android:text="@string/action_browser_edit_url_create_session" />

        <Button
            android:id="@+id/browser_edit_url_go"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:minWidth="0dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="11sp"
            android:text="@string/action_browser_edit_url_confirm" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Button
            android:id="@+id/browser_edit_url_add_bookmark"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="0dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="11sp"
            android:text="@string/action_browser_edit_url_add_bookmark" />

        <Button
            android:id="@+id/browser_edit_url_bookmarks"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="0dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="11sp"
            android:text="@string/action_browser_edit_url_bookmarks" />

        <Button
            android:id="@+id/browser_edit_url_open_in_chrome"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_open_in_new"
            android:drawablePadding="2dp"
            android:minWidth="0dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="11sp"
            android:text="@string/action_browser_open_in_chrome" />
    </LinearLayout>
</LinearLayout>
