<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/session_list_bottom_sheet_controls_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/session_list_bottom_sheet_settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/action_open_settings"
            android:padding="12dp"
            android:src="@drawable/ic_settings"
            android:tint="?attr/termuxActivityDrawerImageTint" />

        <ImageButton
            android:id="@+id/session_list_bottom_sheet_new_session_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/action_new_session"
            android:padding="12dp"
            android:src="@drawable/ic_add"
            android:tint="?attr/termuxActivityDrawerImageTint" />

        <ImageButton
            android:id="@+id/session_list_bottom_sheet_load_session_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/action_load_session_definition"
            android:padding="12dp"
            android:src="@drawable/ic_load_session"
            android:tint="?attr/termuxActivityDrawerImageTint" />

        <ImageButton
            android:id="@+id/session_list_bottom_sheet_google_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/action_open_google"
            android:padding="12dp"
            android:src="@drawable/ic_google"
            android:tint="?attr/termuxActivityDrawerImageTint" />

    </LinearLayout>

    <com.termux.app.terminal.ShortcutFlowLayout
        android:id="@+id/session_list_bottom_sheet_shortcuts_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
