<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/browser_http_auth_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/browser_http_auth_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_browser_http_auth_username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/browser_http_auth_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_browser_http_auth_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Button
            android:id="@+id/browser_http_auth_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="0dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/browser_http_auth_sign_in"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="0dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/action_browser_http_auth_sign_in" />
    </LinearLayout>
</LinearLayout>
